# rise-motion

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  greetings.yml  idle-labeler.yml  stale.yml
rise_motion_dev_ws/src/rise-motion/: CMakeLists.txt  package.xml
rise_motion_dev_ws/src/rise-motion-messages/: CMakeLists.txt  package.xml
rise_motion_dev_ws/src/rise_motion/: CMakeLists.txt  package.xml
rise_motion_dev_ws/src/rise_motion/include/rise_motion/: ec_manager.hpp  ec_structs.hpp  node_fsm.hpp  snapshot.hpp
rise_motion_dev_ws/src/rise_motion/msg/: MotorCommandArray.msg  MotorFeedbackArray.msg
rise_motion_dev_ws/src/rise_motion/src/: ec_manager.cpp  ec_structs.cpp  ethercat_initializer.cpp  main.cpp  node_fsm.cpp  rise_motion_main.cpp
rise_motion_dev_ws/src/rise_motion_messages/: CMakeLists.txt  package.xml
rise_motion_dev_ws/src/rise_motion_messages/msg/: MotorCmdMsg.msg  StateCurrent.msg  StateNoticeMsg.msg
rise_motion_dev_ws/src/rise_motion_messages/srv/: EnableEthercatSrv.srv
