<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rise_motion</name>
  <version>0.1.0</version>
  <description>A ROS2 wrapper around the SOEM and IgH EtherCAT driver for precise motion control in robotic exoskeletons.</description>
  <maintainer email="mt-TB-risemember@win.tu-berlin.de">Project RISE</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rise_motion_messages</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
